# FSL-Net

./: .gitignore  README.md  pyproject.toml
data/queries/: gas_0.1_E1_que.npy
data/references/: gas_0.1_E1_ref.npy
demos/: demo.ipynb
fslnet/: config.py  fslnet.py  transform_data.py
fslnet/checkpoints/: fslnet.pth
